--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <div class="main-content">
-        <div class="main-content--product-list">
+        <div class="main-content__product-list">
             <h1>Desserts</h1>
-            <div class="main-content--product-list--row">
-                <div class="main-content--product-list--row--card">
-                    <div class="card--image-block">
+            <div class="main-content__product-list__row">
+                <div class="main-content__product-list__row__card">
+                    <div class="card__image-block">
                     <img src="1-1.jpg" alt="">
                     <button type="button" class="add_btn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#C73B0F" class="bi bi-cart-plus" viewBox="0 0 16 16">
@@ -23,14 +23,14 @@
                         <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
                         </svg> Add To Cart
                     </button>                    </div>
-                    <div class="card--info-block">
-                        <p class="card--info-block--name">Waffle</p>
-                        <p class="card--info-block--improve-name">Waffle with Berries</p>
-                        <p class="card--info-block--cost">$6.50</p>
+                    <div class="card__info-block">
+                        <p class="card__info-block__name">Waffle</p>
+                        <p class="card__info-block__improve-name">Waffle with Berries</p>
+                        <p class="card__info-block__cost">$6.50</p>
                     </div>
                 </div>
-                <div class="main-content--product-list--row--card">
-                    <div class="card--image-block">
+                <div class="main-content__product-list__row__card">
+                    <div class="card__image-block">
                     <img src="1-2.png" alt="">
                     <button type="button" class="add_btn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#C73B0F" class="bi bi-cart-plus" viewBox="0 0 16 16">
@@ -39,14 +39,14 @@
                         </svg> Add To Cart
                     </button>
                     </div>
-                    <div class="card--info-block">
-                        <p class="card--info-block--name">Crème Brûlée</p>
-                        <p class="card--info-block--improve-name">Vanilla Bean Crème Brûlée</p>
-                        <p class="card--info-block--cost">$7.00</p>
+                    <div class="card__info-block">
+                        <p class="card__info-block__name">Crème Brûlée</p>
+                        <p class="card__info-block__improve-name">Vanilla Bean Crème Brûlée</p>
+                        <p class="card__info-block__cost">$7.00</p>
                     </div>
                 </div>
-                <div class="main-content--product-list--row--card">
-                    <div class="card--image-block">
+                <div class="main-content__product-list__row__card">
+                    <div class="card__image-block">
                     <img src="1-3.png" alt="">
                     <button type="button" class="add_btn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#C73B0F" class="bi bi-cart-plus" viewBox="0 0 16 16">
@@ -54,16 +54,16 @@
                         <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
                         </svg> Add To Cart
                     </button>                    </div>
-                    <div class="card--info-block">
-                        <p class="card--info-block--name">Macaron</p>
-                        <p class="card--info-block--improve-name">Macaron Mix of Five</p>
-                        <p class="card--info-block--cost">$8.00</p>
+                    <div class="card__info-block">
+                        <p class="card__info-block__name">Macaron</p>
+                        <p class="card__info-block__improve-name">Macaron Mix of Five</p>
+                        <p class="card__info-block__cost">$8.00</p>
                     </div>
                 </div>
             </div>
-            <div class="main-content--product-list--row">
-                <div class="main-content--product-list--row--card">
-                    <div class="card--image-block">
+            <div class="main-content__product-list__row">
+                <div class="main-content__product-list__row__card">
+                    <div class="card__image-block">
                     <img src="2-1.png" alt="">
                     <button type="button" class="add_btn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#C73B0F" class="bi bi-cart-plus" viewBox="0 0 16 16">
@@ -71,14 +71,14 @@
                         <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
                         </svg> Add To Cart
                     </button>                    </div>
-                    <div class="card--info-block">
-                        <p class="card--info-block--name">Tiramisu</p>
-                        <p class="card--info-block--improve-name">Classic Tiramisu</p>
-                        <p class="card--info-block--cost">$5.50</p>
+                    <div class="card__info-block">
+                        <p class="card__info-block__name">Tiramisu</p>
+                        <p class="card__info-block__improve-name">Classic Tiramisu</p>
+                        <p class="card__info-block__cost">$5.50</p>
                     </div>
                 </div>
-                <div class="main-content--product-list--row--card">
-                    <div class="card--image-block">
+                <div class="main-content__product-list__row__card">
+                    <div class="card__image-block">
                     <img src="2-2.png" alt="">
                     <button type="button" class="add_btn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#C73B0F" class="bi bi-cart-plus" viewBox="0 0 16 16">
@@ -86,14 +86,14 @@
                         <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
                         </svg> Add To Cart
                     </button>                    </div>
-                    <div class="card--info-block">
-                        <p class="card--info-block--name">Baklava</p>
-                        <p class="card--info-block--improve-name">Pistachio Baklava</p>
-                        <p class="card--info-block--cost">$4.00</p>
+                    <div class="card__info-block">
+                        <p class="card__info-block__name">Baklava</p>
+                        <p class="card__info-block__improve-name">Pistachio Baklava</p>
+                        <p class="card__info-block__cost">$4.00</p>
                     </div>
                 </div>
-                <div class="main-content--product-list--row--card">
-                    <div class="card--image-block">
+                <div class="main-content__product-list__row__card">
+                    <div class="card__image-block">
                     <img src="2-3.png" alt="">
                     <button type="button" class="add_btn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#C73B0F" class="bi bi-cart-plus" viewBox="0 0 16 16">
@@ -101,16 +101,16 @@
                         <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
                         </svg> Add To Cart
                     </button>                    </div>
-                    <div class="card--info-block">
-                        <p class="card--info-block--name">Pie</p>
-                        <p class="card--info-block--improve-name">Lemon Meringue Pie</p>
-                        <p class="card--info-block--cost">$5.00</p>
+                    <div class="card__info-block">
+                        <p class="card__info-block__name">Pie</p>
+                        <p class="card__info-block__improve-name">Lemon Meringue Pie</p>
+                        <p class="card__info-block__cost">$5.00</p>
                     </div>
                 </div>
             </div>
-            <div class="main-content--product-list--row">
-                <div class="main-content--product-list--row--card">
-                    <div class="card--image-block">
+            <div class="main-content__product-list__row">
+                <div class="main-content__product-list__row__card">
+                    <div class="card__image-block">
                     <img src="3-1.png" alt="">
                     <button type="button" class="add_btn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#C73B0F" class="bi bi-cart-plus" viewBox="0 0 16 16">
@@ -118,14 +118,14 @@
                         <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
                         </svg> Add To Cart
                     </button>                    </div>
-                    <div class="card--info-block">
-                        <p class="card--info-block--name">Cake</p>
-                        <p class="card--info-block--improve-name">Red Velvet Cake</p>
-                        <p class="card--info-block--cost">$4.50</p>
+                    <div class="card__info-block">
+                        <p class="card__info-block__name">Cake</p>
+                        <p class="card__info-block__improve-name">Red Velvet Cake</p>
+                        <p class="card__info-block__cost">$4.50</p>
                     </div>
                 </div>
-                <div class="main-content--product-list--row--card">
-                    <div class="card--image-block">
+                <div class="main-content__product-list__row__card">
+                    <div class="card__image-block">
                     <img src="3-2.png" alt="">
                     <button type="button" class="add_btn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#C73B0F" class="bi bi-cart-plus" viewBox="0 0 16 16">
@@ -133,14 +133,14 @@
                         <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
                         </svg> Add To Cart
                     </button>                    </div>
-                    <div class="card--info-block">
-                        <p class="card--info-block--name">Brownie</p>
-                        <p class="card--info-block--improve-name">Salted Caramel Brownie</p>
-                        <p class="card--info-block--cost">$5.50</p>
+                    <div class="card__info-block">
+                        <p class="card__info-block__name">Brownie</p>
+                        <p class="card__info-block__improve-name">Salted Caramel Brownie</p>
+                        <p class="card__info-block__cost">$5.50</p>
                     </div>
                 </div>
-                <div class="main-content--product-list--row--card">
-                    <div class="card--image-block">
+                <div class="main-content__product-list__row__card">
+                    <div class="card__image-block">
                     <img src="3-3.png" alt="">
                     <button type="button" class="add_btn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#C73B0F" class="bi bi-cart-plus" viewBox="0 0 16 16">
@@ -148,18 +148,18 @@
                         <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
                         </svg> Add To Cart
                     </button>                    </div>
-                    <div class="card--info-block">
-                        <p class="card--info-block--name">Panna Cotta</p>
-                        <p class="card--info-block--improve-name">Vanilla Panna Cotta</p>
-                        <p class="card--info-block--cost">$6.50</p>
+                    <div class="card__info-block">
+                        <p class="card__info-block__name">Panna Cotta</p>
+                        <p class="card__info-block__improve-name">Vanilla Panna Cotta</p>
+                        <p class="card__info-block__cost">$6.50</p>
                     </div>
                 </div>
             </div>
         </div>  
-        <div class="main-content--cart">
+        <div class="main-content__cart">
             <div class="cart">
-                <div class="cart--title"><p>Your Cart (0)</p></div>
-                <div class="cart--items">
+                <div class="cart__title"><p>Your Cart (0)</p></div>
+                <div class="cart__items">
                     <img src="cart-image.svg" alt="">
                     <p>Your added items will appear here</p>
                     
